chore: update swagger doc with api endpoints
